--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -16,4 +16,20 @@
         android:textColor="@color/white"
         android:textSize="16sp" />
 
+
+    <ImageView
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:id="@+id/image"
+        android:layout_marginTop="@dimen/dp_10"
+        android:src="@drawable/anim_test"/>
+
+    <Button
+        android:id="@+id/btn_anim"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:text="点击我"
+        android:layout_margin="@dimen/dp_10"/>
+
+
 </LinearLayout>
