--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:fitsSystemWindows="true"
+    tools:context=".ui.activity.MainActivity">
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/vpMain"
@@ -22,6 +23,7 @@
         app:labelVisibilityMode="selected"
         app:menu="@menu/main"
         android:visibility="visible"
+        android:transitionName="@string/strat_bottom"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
