--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -17,19 +17,12 @@
         android:textSize="16sp" />
 
 
-    <ImageView
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:id="@+id/image"
-        android:layout_marginTop="@dimen/dp_10"
-        android:src="@drawable/anim_test"/>
-
-    <Button
-        android:id="@+id/btn_anim"
+    <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:text="点击我"
-        android:layout_margin="@dimen/dp_10"/>
+        android:layout_height="match_parent"
+        android:layout_marginLeft="@dimen/dp_10"
+        android:layout_marginRight="@dimen/dp_10"
+        android:id="@+id/home_rv_test"/>
 
 
 </LinearLayout>
