--- a/app/src/main/res/layout/fragment_order.xml
+++ b/app/src/main/res/layout/fragment_order.xml
@@ -1,19 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:fitsSystemWindows="true"
+    android:orientation="vertical"
+    android:id="@+id/swiperRefresh">
 
-    <TextView
-        android:id="@+id/title_home"
+
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="@color/blue"
-        android:gravity="center"
-        android:maxLength="16"
-        android:text="@string/menu_order"
-        android:textStyle="bold"
-        android:textColor="@color/white"
-        android:textSize="16sp" />
+        android:layout_height="match_parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <com.google.android.material.appbar.AppBarLayout
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:id="@+id/head"
+            app:srcCompat="@drawable/main_head_bg_round">
+
+            <include
+                android:id="@+id/layoutHeader"
+                layout="@layout/motion_heah"/>
+
+        </com.google.android.material.appbar.AppBarLayout>
+
+        <androidx.core.widget.NestedScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
+            >
+
+            <TextView
+                android:id="@+id/title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/dp_10"
+                android:text="我的微信好友当中，也有我的前任。不带一点感情，也绝无回头的可能，就像我的性别一样的绝对。但我还是会偶尔点开别人的朋友圈看看。没别的，只是单纯的好奇心。但一个停留在我好友名单里的前任微信，的确会增加我想起这个人的概率。所以在当我遇到下任的时候，我想我会删的一干二净。没别的，就是不想跟现人之间徒增不愉快的可能。哪怕只是他心里一秒的醋意，哪怕他说他并不介意，也不可以。介不介意是他的事情？是否主动清扫干净？是我的事情。
+　　其实完全忘掉现任是不现实的。但我们可以选择，不想，不想也就不会表现出来。现任也就不会为此抓狂。如果我们放不下前任，那就先单身，不应该去祸害任何人。如果选择重新恋爱，那就得学会，把前任封存，而且除了前任我们还应该懂得跟身边的所有异性都保持着距离。之前也是看《快乐大本营》，何炅让朱亚文帮吴昕做游戏，朱亚文立马拒绝说对不起。我已婚了。还有都将在一个节目中，他和鬼鬼做游戏，两个人挨得比较近。都将迅速后退，并说你不用离我这么近。单身者无论什么原因，都应该和非单身人士保持距离，这是教养。有了恋爱对象或者已婚人士，无论什么原因，都应该对异性不近人情，这是尊重伴侣。看一个人是否是一个好的爱人，我觉我的微信好友当中，也有我的前任。不带一点感情，也绝无回头的可能，就像我的性别一样的绝对。但我还是会偶尔点开别人的朋友圈看看。没别的，只是单纯的好奇心。但一个停留在我好友名单里的前任微信，的确会增加我想起这个人的概率。所以在当我遇到下任的时候，我想我会删的一干二净。没别的，就是不想跟现人之间徒增不愉快的可能。哪怕只是他心里一秒的醋意，哪怕他说他并不介意，也不可以。介不介意是他的事情？是否主动清扫干净？是我的事情。
+　　其实完全忘掉现任是不现实的。但我们可以选择，不想，不想也就不会表现出来。现任也就不会为此抓狂。如果我们放不下前任，那就先单身，不应该去祸害任何人。如果选择重新恋爱，那就得学会，把前任封存，而且除了前任我们还应该懂得跟身边的所有异性都保持着距离。之前也是看《快乐大本营》，何炅让朱亚文帮吴昕做游戏，朱亚文立马拒绝说对不起。我已婚了。还有都将在一个节目中，他和鬼鬼做游戏，两个人挨得比较近。都将迅速后退，并说你不用离我这么近。单身者无论什么原因，都应该和非单身人士保持距离，这是教养。有了恋爱对象或者已婚人士，无论什么原因，都应该对异性不近人情，这是尊重伴侣。看一个人是否是一个好的爱人，我觉得就看这个人对异性的边界是否清楚了，因为在乎你，他不会做中央空调，想面面俱到，赢得所有人的喜欢，他做事情会先考虑你的感受，还和你解释清楚所有异性的社交关系。会优先思考，会不会影响你们的关系？我相信男女之间有纯友谊，但我更相信为了我们的纯友谊。我们应该和别人保持合适的距离，我相信爱情里应该给够对方信任，但我更相信爱情是排他性的二人行为。我爱你，所以我愿意为你和别人保持距离。我的微信好友当中，也有我的前任。不带一点感情，也绝无回头的可能，就像我的性别一样的绝对。但我还是会偶尔点开别人的朋友圈看看。没别的，只是单纯的好奇心。但一个停留在我好友名单里的前任微信，的确会增加我想起这个人的概率。所以在当我遇到下任的时候，我想我会删的一干二净。没别的，就是不想跟现人之间徒增不愉快的可能。哪怕只是他心里一秒的醋意，哪怕他说他并不介意，也不可以。介不介意是他的事情？是否主动清扫干净？是我的事情。
+　　其实完全忘掉现任是不现实的。但我们可以选择，不想，不想也就不会表现出来。现任也就不会为此抓狂。如果我们放不下前任，那就先单身，不应该去祸害任何人。如果选择重新恋爱，那就得学会，把前任封存，而且除了前任我们还应该懂得跟身边的所有异性都保持着距离。之前也是看《快乐大本营》，何炅让朱亚文帮吴昕做游戏，朱亚文立马拒绝说对不起。我已婚了。还有都将在一个节目中，他和鬼鬼做游戏，两个人挨得比较近。都将迅速后退，并说你不用离我这么近。单身者无论什么原因，都应该和非单身人士保持距离，这是教养。有了恋爱对象或者已婚人士，无论什么原因，都应该对异性不近人情，这是尊重伴侣。看一个人是否是一个好的爱人，我觉得就看这个人对异性的边界是否清楚了，因为在乎你，他不会做中央空调，想面面俱到，赢得所有人的喜欢，他做事情会先考虑你的感受，还和你解释清楚所有异性的社交关系。会优先思考，会不会影响你们的关系？我相信男女之间有纯友谊，但我更相信为了我们的纯友谊。我们应该和别人保持合适的距离，我相信爱情里应该给够对方信任，但我更相信爱情是排他性的二人行为。我爱你，所以我愿意为你和别人保持距离。我的微信好友当中，也有我的前任。不带一点感情，也绝无回头的可能，就像我的性别一样的绝对。但我还是会偶尔点开别人的朋友圈看看。没别的，只是单纯的好奇心。但一个停留在我好友名单里的前任微信，的确会增加我想起这个人的概率。所以在当我遇到下任的时候，我想我会删的一干二净。没别的，就是不想跟现人之间徒增不愉快的可能。哪怕只是他心里一秒的醋意，哪怕他说他并不介意，也不可以。介不介意是他的事情？是否主动清扫干净？是我的事情。
+　　其实完全忘掉现任是不现实的。但我们可以选择，不想，不想也就不会表现出来。现任也就不会为此抓狂。如果我们放不下前任，那就先单身，不应该去祸害任何人。如果选择重新恋爱，那就得学会，把前任封存，而且除了前任我们还应该懂得跟身边的所有异性都保持着距离。之前也是看《快乐大本营》，何炅让朱亚文帮吴昕做游戏，朱亚文立马拒绝说对不起。我已婚了。还有都将在一个节目中，他和鬼鬼做游戏，两个人挨得比较近。都将迅速后退，并说你不用离我这么近。单身者无论什么原因，都应该和非单身人士保持距离，这是教养。有了恋爱对象或者已婚人士，无论什么原因，都应该对异性不近人情，这是尊重伴侣。看一个人是否是一个好的爱人，我觉得就看这个人对异性的边界是否清楚了，因为在乎你，他不会做中央空调，想面面俱到，赢得所有人的喜欢，他做事情会先考虑你的感受，还和你解释清楚所有异性的社交关系。会优先思考，会不会影响你们的关系？我相信男女之间有纯友谊，但我更相信为了我们的纯友谊。我们应该和别人保持合适的距离，我相信爱情里应该给够对方信任，但我更相信爱情是排他性的二人行为。我爱你，所以我愿意为你和别人保持距离。得就看这个人对异性的边界是否清楚了，因为在乎你，他不会做中央空调，想面面俱到，赢得所有人的喜欢，他做事情会先考虑你的感受，还和你解释清楚所有异性的社交关系。会优先思考，会不会影响你们的关系？我相信男女之间有纯友谊，但我更相信为了我们的纯友谊。我们应该和别人保持合适的距离，我相信爱情里应该给够对方信任，但我更相信爱情是排他性的二人行为。我爱你，所以我愿意为你和别人保持距离。"
+                />
+
+        </androidx.core.widget.NestedScrollView>
+
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
 </LinearLayout>
