--- a/app/src/main/res/layout/rv_home_test.xml
+++ b/app/src/main/res/layout/rv_home_test.xml
@@ -1,13 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/dp_40"
-    android:background="@drawable/border_solid_lines">
+    android:layout_height="120dp"
+    android:layout_margin="5dp"
+    android:orientation="horizontal"
+    android:background="@drawable/border_circle_lines">
 
-    <TextView
-        android:layout_width="match_parent"
+    <ImageView
+        android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:gravity="center"
-        android:id="@+id/tv_home_test"/>
+        android:layout_weight="4"
+        android:id="@+id/rv_image_home"
+        android:transitionName="a20"/>
+
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="8"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:gravity="center_vertical"
+            android:transitionName="a10"
+            android:text=""
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:paddingLeft="@dimen/dp_10"
+            android:id="@+id/rv_home_title"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="@dimen/dp_10"
+            android:maxLines="2"
+            android:textSize="15sp"
+            android:id="@+id/rv_home_content"
+            android:ellipsize="end"/>
+
+    </LinearLayout>
 
 </LinearLayout>
