--- a/app/src/main/res/layout/layout_test1.xml
+++ b/app/src/main/res/layout/layout_test1.xml
@@ -1,29 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#1296db"
-    android:orientation="horizontal">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <ImageView
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="100dp"
-        android:layout_marginLeft="30dp"
-        android:src="@drawable/ball"
-        android:id="@+id/test1_image"
-        android:transitionName="@string/test_name"/>
-
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:text="球变大啦"
-        android:textSize="16dp"
-        android:transitionName="text"
-        android:id="@+id/test1_text"
-        android:gravity="center_vertical"
-        android:layout_marginTop="100dp"/>
+        android:layout_height="match_parent"
+        android:background="#1296db"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="100dp"
+            android:layout_marginLeft="30dp"
+            android:src="@drawable/ball"
+            android:id="@+id/test1_image"
+            android:transitionName="@string/test_name"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:text="球变大啦"
+            android:textSize="16dp"
+            android:transitionName="text"
+            android:id="@+id/test1_text"
+            android:gravity="center_vertical"
+            android:layout_marginTop="100dp"/>
 
 
 
-</LinearLayout>
+    </LinearLayout>
+</layout>
+
