--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -3,6 +3,12 @@
     <item android:id="@+id/homeFragment"
         android:title="@string/menu_home"
         android:icon="@drawable/home_menu_img"/>
+    <item android:id="@+id/communityFragment"
+        android:title="@string/menu_community"
+        android:icon="@drawable/community"/>
+    <item android:id="@+id/nullF"
+        android:checkable="false"
+        android:title=""/>
     <item android:id="@+id/orderFragment"
         android:title="@string/menu_order"
         android:icon="@drawable/order_menu_img"/>
