--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -15,10 +15,10 @@
         <item name="windowNoTitle">true</item>
         <item name="android:textColor">@color/black</item>
 <!--        配置允许window content transitions-->
-        <item name="android:windowContentTransitions" tools:targetApi="lollipop">true</item>
-        <item name="android:windowIsTranslucent">true</item>
+<!--        <item name="android:windowContentTransitions" tools:targetApi="lollipop">true</item>-->
+<!--        <item name="android:windowIsTranslucent">true</item>-->
 <!--        透明状态栏-->
-        <item name="android:windowTranslucentStatus" tools:ignore="NewApi">true</item>
+<!--        <item name="android:windowTranslucentStatus" tools:ignore="NewApi">true</item>-->
     </style>
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
