--- a/app/src/main/res/layout/fragment_me.xml
+++ b/app/src/main/res/layout/fragment_me.xml
@@ -1,5 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <data>
+        <variable
+            name="user"
+            type="com.example.zyy_sendwater.data.model.User" />
+    </data>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -40,7 +48,7 @@
                 android:id="@+id/btn_nickname"
                 android:layout_width="wrap_content"
                 android:layout_height="40dp"
-                android:text="@string/strat_bottom"
+                android:text="@{user.data.nickName}"
                 android:textColor="@color/white"
                 android:textStyle="italic"
                 android:gravity="center_vertical"
@@ -52,7 +60,7 @@
                 android:id="@+id/btn_content"
                 android:layout_width="wrap_content"
                 android:layout_height="40dp"
-                android:text="@string/strat_bottom"
+                android:text="@{user.data.content}"
                 android:textColor="@color/white"
                 android:textStyle="bold"
                 android:gravity="center_vertical"
